# GestureFlow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/canvas/: canvas_core.py  gesture_handler.py  main.py
apps/canvas/ui/: toolbar.py
apps/hci/: camera.py  config.py  gesture_classifier.py  main.py
apps/hci/controllers/: __init__.py  base.py  brightness.py  cursor.py  media.py  scroll.py  tab_switch.py  volume.py
apps/hci/ui/: overlay.py  settings.py  tray.py
core/: __init__.py  coordinate_mapper.py  hand_tracker.py  landmark_utils.py  smoothing.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GESTURES.md  INSTALLATION.md  PIPELINE.md
scripts/: build_all.bat  build_canvas.spec  build_hci.spec  calibrate_gestures.py  installer.iss
tests/: test_landmark_utils.py  test_smoothing.py
